other-cel/advanced-restrict-image-registries/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: imageregistries-ns01
spec:
  initContainers:
  - name: busybox01-init
    image: img.corp.com/busybox:1.35
  # - name: busybox02-init
  #   image: ghcr.io/busybox:1.35
  containers:
  # - name: busybox01
  #   image: ghcr.io/busybox:1.35
  - name: busybox02
    image: img.corp.com/busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  namespace: imageregistries-ns02
spec:
  initContainers:
  - name: busybox01-init
    image: ghcr.io/busybox:1.35
  containers:
  - name: busybox01
    image: docker.io/busybox:1.35
  - name: busybox02
    image: docker.io/busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  initContainers:
  - name: busybox01-init
    image: ghcr.io/busybox:1.35
  containers:
  - name: busybox01
    image: ghcr.io/busybox:1.35
  - name: busybox02
    image: ghcr.io/busybox:1.35
