other-cel/advanced-restrict-image-registries/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeploy01
  namespace: imageregistries-ns01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - name: busybox01-init
        image: img.corp.com/busybox:1.35
      - name: busybox02-init
        image: ghcr.io/busybox:1.35
      containers:
      - name: busybox01
        image: ghcr.io/busybox:1.35
      - name: busybox02
        image: img.corp.com/busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
  namespace: imageregistries-ns02
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: busybox01-init
            image: docker.io/busybox:1.35
          - name: busybox02-init
            image: ghcr.io/busybox:1.35
          containers:
          - name: busybox01
            image: ghcr.io/busybox:1.35
          - name: busybox02
            image: docker.io/busybox:1.35
          restartPolicy: OnFailure
