other-cel/advanced-restrict-image-registries/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: advanced-restrict-image-registries
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
